# controllers/blogsController.js
@@ -2,11 +2,11 @@ const Blog = require('../models/Blog');
 
 // Create a new blog
 exports.createBlog = async (req, res) => {
-  // #swagger.tags = ['blog']
+  // #swagger.tags = ['blogs']
   /* 
   #swagger.parameters['body'] = {
             in: 'body',
-            description: 'category data.',
+            description: 'blogs data.',
             required: true,
             schema: {
                 title: "",
@@ -28,7 +28,7 @@ exports.createBlog = async (req, res) => {
 
 // Get all blogs
 exports.getAllBlogs = async (req, res) => {
-  // #swagger.tags = ['blog']
+  // #swagger.tags = ['blogs']
   try {
     const blogs = await Blog.find();
     res.status(200).json(blogs);
@@ -39,11 +39,11 @@ exports.getAllBlogs = async (req, res) => {
 
 // Update a blog
 exports.updateBlog = async (req, res) => {
-  // #swagger.tags = ['blog']
+  // #swagger.tags = ['blogs']
   /* 
   #swagger.parameters['body'] = {
             in: 'body',
-            description: 'category data.',
+            description: 'blogs data.',
             required: true,
             schema: {
                 title: "",
@@ -64,7 +64,7 @@ exports.updateBlog = async (req, res) => {
 
 // Delete a blog
 exports.deleteBlog = async (req, res) => {
-  // #swagger.tags = ['blog']
+  // #swagger.tags = ['blogs']
   try {
     await Blog.findByIdAndDelete(req.params.id);
     res.status(200).json({ message: 'Blog deleted' });
