# routes/auth.js
@@ -1,12 +1,14 @@
 const express = require('express');
+const authenticateToken = require('../middleware/authMiddleware');
 const router = express.Router();
-const { register, loginCustomer, loginAdmin, updateUser, getAllUsers, deleteUser } = require('../controllers/authController');
+const { register, loginCustomer, loginAdmin, updateUser, updatePassword, getAllUsers, deleteUser } = require('../controllers/authController');
 
 router.post('/api/auth/register', register); 
 router.post('/api/auth/loginCustomer', loginCustomer);
 router.post('/api/auth/loginAdmin', loginAdmin);
-router.put('/api/auth/updateUser/:id', updateUser);
-router.delete('/api/auth/deleteUser/:id', deleteUser);
-router.get('/api/auth', getAllUsers);
+router.put('/api/auth/updateUser', authenticateToken, updateUser);
+router.put('/api/auth/updatePassword', authenticateToken, updatePassword);
+router.delete('/api/auth/deleteUser', authenticateToken, deleteUser);
+router.get('/api/auth', authenticateToken, getAllUsers);
 
 module.exports = router;
